Fixed the visual display of faceted navigation items
For a larger dataset, the date histogram facet items were overlapping.

--- a/qa/static/base.css
+++ b/qa/static/base.css
@@ -101,9 +101,9 @@ a {
   background: #e6e6e6;
   font-weight: normal;
   padding: 0.25em 0.5em 0.3em 0.5em;
-  margin-right: 0.5em;
+  margin: 0 0.25em 0.5em 0;
   border-radius: 0.25em;
-  display: inline;
+  display: inline-block;
 }
 
 .search ul li.selected {
